--- a/src/kayleejs/templates/index.html
+++ b/src/kayleejs/templates/index.html
@@ -2,7 +2,7 @@
   <head>
   <link href="/static/css/all.css" rel="stylesheet" />
   <script src="/static/js/lib/jquery.min.js" type="text/javascript"></script>
-  <script src="/static/js/lib/toast-0.2.10.min.js"></script>
+  <script src="/static/js/lib/script.min.js"></script>
   <script src="/static/js/kaylee/kaylee.js" type="text/javascript"></script>
   <script src="/static/js/kaylee/klconsole.js" type="text/javascript"></script>
   <script src="/static/js/kaylee/kldemo.js" type="text/javascript"></script>
