Added internal AJAX routine. No more jQuery dependecy!
This commit still contains jQuery code to execute AJAX calls.
The code will be removed as obsolete.

--- a/src/kaylee/contrib/client/demo/templates/index.html
+++ b/src/kaylee/contrib/client/demo/templates/index.html
@@ -2,10 +2,14 @@
   <head>
   <link href="/static/css/all.css" rel="stylesheet" />
   <script src="/static/js/lib/jquery.min.js" type="text/javascript"></script>
-  <script src="/static/js/lib/script.min.js"></script>
+
+  <!-- Kaylee client library -->
   <script src="/static/js/kaylee/kaylee.js" type="text/javascript"></script>
+
+  <!-- Kaylee demo -->
   <script src="/static/js/kaylee/klconsole.js" type="text/javascript"></script>
   <script src="/static/js/kaylee/kldemo.js" type="text/javascript"></script>
+
 
   <title>Kaylee demo</title>
 
