--- a/demo/static/css/kl_demo.css
+++ b/demo/static/css/kl_demo.css
@@ -4,7 +4,7 @@ body {
     text-align: center; /* !!! */
 }
 
-.console {
+.kl-console {
     margin:0 auto;
     text-align:left;
     width:800px;
@@ -14,6 +14,10 @@ body {
     overflow: auto;
     font-size:1.2em;
     font-family:monospace;
+}
+
+.kl-console-half-size {
+    height:400px;
 }
 
 .cem {
