--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <link href="/static/css/all.css" rel="stylesheet" />
+  <link href="/static/css/kl_demo.css" rel="stylesheet" />
   <script src="/static/js/lib/jquery.min.js" type="text/javascript"></script>
 
   <!-- Kaylee client library -->
@@ -15,6 +15,5 @@
 
   </head>
   <body>
-      <div id="console"></div>
-  </body>
+  </body's>
 </html>
