--- a/kaylee/manager/commands/templates/build_template/index.html
+++ b/kaylee/manager/commands/templates/build_template/index.html
@@ -1,19 +1,15 @@
 <html>
   <head>
-  <link href="/static/css/kl_demo.css" rel="stylesheet" />
-  <script src="/static/js/lib/jquery.min.js" type="text/javascript"></script>
-
   <!-- Kaylee client library -->
-  <script src="/static/js/kaylee/kaylee.js" type="text/javascript"></script>
+  <script src="/static/kaylee/js/kaylee.js" type="text/javascript"></script>
 
   <!-- Kaylee demo -->
-  <script src="/static/js/kaylee/klconsole.js" type="text/javascript"></script>
-  <script src="/static/js/kaylee/kldemo.js" type="text/javascript"></script>
-
+  <link href="/static/css/kldemo.css" rel="stylesheet" />
+  <script src="/static/kaylee/js/jquery.min.js" type="text/javascript"></script>
+  <script src="/static/kaylee/js/kldemo.js" type="text/javascript"></script>
 
   <title>Kaylee demo</title>
-
   </head>
-  <body>
-  </body>
+
+  <body></body>
 </html>
