--- a/kaylee/manager/commands/templates/build_template/index.html
+++ b/kaylee/manager/commands/templates/build_template/index.html
@@ -4,7 +4,7 @@
   <script src="/static/kaylee/js/kaylee.js" type="text/javascript"></script>
 
   <!-- Kaylee demo -->
-  <link href="/static/css/kldemo.css" rel="stylesheet" />
+  <link href="/static/kaylee/css/kldemo.css" rel="stylesheet" />
   <script src="/static/kaylee/js/jquery.min.js" type="text/javascript"></script>
   <script src="/static/kaylee/js/kldemo.js" type="text/javascript"></script>
 
