Updating the documentation and build templates.

--- a/kaylee/manager/commands/templates/build_template/index.html
+++ b/kaylee/manager/commands/templates/build_template/index.html
@@ -3,12 +3,12 @@
   <!-- Kaylee client library -->
   <script src="/static/kaylee/js/kaylee.js" type="text/javascript"></script>
 
-  <!-- Kaylee demo -->
-  <link href="/static/kaylee/css/kldemo.css" rel="stylesheet" />
+  <!-- Kaylee Echo -->
+  <link href="/static/kaylee/css/klconsole.css" rel="stylesheet" />
   <script src="/static/kaylee/js/jquery.min.js" type="text/javascript"></script>
-  <script src="/static/kaylee/js/kldemo.js" type="text/javascript"></script>
+  <script src="/static/kaylee/js/kldebug.js" type="text/javascript"></script>
 
-  <title>Kaylee demo</title>
+  <title>Kaylee Console</title>
   </head>
 
   <body></body>
